# mids-hero-web

./: .claudeignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CLAUDE.md.old  Dockerfile  README.md  ROADMAP.md  TEST_WORKFLOWS.md  alembic.ini  claude_md_from_274.md  docker-compose.yml  github_actions_summary.md  justfile  justfile.backup  pr274_analysis.md  pr274_diff.txt  pr274_validation.md  progress.json  requirements-context.txt  test-doc-synthesis.py
.claude/: BACKEND_CLARIFICATION.md  CLEANUP_LOG.md  EPIC_2.5.3_UPDATES.md  README.md  context-map.json  development-workflow.md  doc-synthesis-config.yml  mcp_bridge.sh  progress.json  quick-commands-test.md  quick-commands.md  scratchpad.md  settings-hooks.json  settings-old.json  settings.json  settings.local.json  setup.sh  test-file.txt  thresholds.json
.claudecheckpoints/: mcp_registered.txt
.github/: README.md
DataExporter/: DataExporter.csproj  DirectDataLoader.cs  JsonArchiveExtractor.cs  MacMidsExplorer.cs  MhdExporter.cs  MhdParser.cs  MhdToJsonConverter.cs  MidsRebornExporter.cs  MidsRebornWrapper.cs  Program.cs  README.md  SimpleMhdExporter.cs  SimpleMhdParser.cs  TextToJsonParser.cs  build-commands.txt  diagnose-commands.txt  manual-build-steps.txt  quick-build-commands.txt  test_issue_154.py
DataExporter.Tests/: DataExporter.Tests.csproj  DatabaseLoadingTests.cs  IntegrationTests.cs  JsonExportTests.cs  MidsRebornExporterTests.cs  PerformanceBenchmarks.cs  TestHelpers.cs
alembic/: env.py
api/: README.md  main.py  requirements.txt
archive/: CLEANUP_LOG.md  ROADMAP.md
backend/: .env.example  MIGRATION_INSTRUCTIONS.md  README.md  calculation_analysis_report.md  main.py  manual_migration.py  package-lock.json  package.json  pyproject.toml
docs/: AGENTIC_DEVELOPMENT_WORKFLOW.md  CLAUDE-INFRASTRUCTURE-MODERNIZATION-SUMMARY.md  CLAUDE-INFRASTRUCTURE-REVIEW.md  CODEBASE_STRUCTURE.md  DOCUMENTATION-AUDIT-2025-11-13.md  DOCUMENTATION-STANDARDS.md  PROJECT_EVOLUTION.md  PROJECT_STATUS.md  calculation_contract.md  claude-implementation-plan.md  data-import-implementation-plan.md  data-import-summary.md  dataexporter-current-state.md  epic-3-remaining-work.md  epic3-task-summary.md  mhd-data-import-solution.md  mhd-data-import-status.md  mhd-data-loss-assessment.md  midsreborn-3.7.14-rebuild-instructions.md  midsreborn-integration-summary.md  midsreborn-parser-requirements.md  midsreborn-version-mismatch-solution.md  python-parser-feasibility-analysis.md  python-parser-final-assessment.md  python-parser-implementation-plan.md  session-082525.md  windows-11-guide-updates.md  windows-11-production-export-guide.md  windows-dependency-limitation.md  windows-vm-data-export-guide-summary.md
filtered_data/: archetypes_manifest.json  boost_sets_manifest.json  (+3 more)
legacy-backend/: alembic.ini  pyproject.toml
legacy-backend/.claude/rag/cache/: batch_history.json  models_embedding-001_RETRIEVAL_DOCUMENT_0dc6e1415bea32bc42d1dedc3bc723a2e3c08d42b2fae20ca3bd5a5a99a804ba.json  models_embedding-001_RETRIEVAL_DOCUMENT_5ad83ca00ba2d174909774b08243f6623de979fa459b53481c4822057a0ce575.json  models_embedding-001_RETRIEVAL_DOCUMENT_5f9546d180f0522d5276323dc3e8b7a0fa3e1b9e26d8da2b00b970dd8f9d6ecb.json  models_embedding-001_RETRIEVAL_DOCUMENT_66e20843c03f32497cfb665f2db6266ee45e0f759759b5588fa681d977aa95e8.json  models_embedding-001_RETRIEVAL_DOCUMENT_97eaaa5da80f0fd390079a8bbf715ae9c86735a1f8de8f5ab4bb60d6fa6e911c.json  models_embedding-001_RETRIEVAL_DOCUMENT_c123682beaa01d60c1a4fb76bc988fbdcc61fb88638a11ae36fa33ebefdac440.json  models_embedding-001_RETRIEVAL_DOCUMENT_ca6997a64b3241993001ec88420d1649820dbea7789e17c9d1fb29080ba7326e.json  models_embedding-001_RETRIEVAL_DOCUMENT_d8fa3f70e3e6e37e3e8021b7f15c6176a9015d221aea97b3eaabfb230c836051.json  models_embedding-001_RETRIEVAL_DOCUMENT_e8347df5e36fe063b5e06503bee271844eae4a97529dbf3f3e7d7de2350b6f2c.json  models_embedding-001_RETRIEVAL_DOCUMENT_e922b40294240f8f76eed992691a6fd10a68c13c0c7dfd95d1adbe304737ab8c.json  models_embedding-001_RETRIEVAL_DOCUMENT_f5e390c88e0ae3d4d7f13c6a371af828596ecf50d2db4fea955b83d84bf1d75a.json
legacy-backend/alembic/versions/: 0236d1f741c9_add_i12_power_data_optimizations.py
legacy-backend/app/data_import/: README.md  __init__.py  archetype_importer.py  base_importer.py  i12_streaming_parser.py
legacy-backend/app/rag/: __init__.py  batch_processor.py  cli.py  client.py  config.py  database.py  exceptions.py  processor.py
legacy-backend/app/routers/: archetypes.py  builds.py
legacy-backend/archive/: README.md
legacy-backend/archive/mhd_parser/: errors.py  power_parser.py  powerset_parser.py
legacy-backend/archive/mhd_parser_tests/: test_binary_reader_strings.py  test_integration.py  test_text_mhd_parser.py
legacy-backend/tests/: test_powers.py  test_powersets.py
legacy-backend/tests/data_integrity/: __init__.py
legacy-backend/tests/rag/: test_batch_processor.py  test_chromadb_manager.py  test_cli_commands.py  test_document_processor.py  test_embedding_client.py  test_usage_monitor.py
legacy-backend/tests/rag/integration/: test_rag_pipeline.py
(+7292 files in other folders)
